--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "description": "Une proposition de réponse au challenge Design4green 2019",
   "scripts": {
-    "start": "webpack-dev-server --config webpack.dev.js --hot",
+    "start": "run-p start:**",
+    "start:html": "nodemon -w src -e html -x \"npm run build:html\"",
+    "start:webpack": "webpack-dev-server --config webpack.dev.js --hot",
     "prebuild": "rimraf dist",
-    "build": "cross-env NODE_ENV=production webpack --config webpack.prod.js"
+    "build": "run-p build:**",
+    "build:html": "html-minifier --collapse-whitespace --remove-comments --remove-optional-tags --remove-redundant-attributes --remove-script-type-attributes --remove-tag-whitespace --use-short-doctype --input-dir src --output-dir dist",
+    "build:webpack": "cross-env NODE_ENV=production webpack --config webpack.prod.js"
   },
   "author": "CGreenIdea",
   "license": "MIT",
@@ -23,11 +27,19 @@
     "cross-env": "^6.0.3",
     "css-loader": "^3.2.0",
     "file-loader": "^4.2.0",
+    "html-minifier": "^4.0.0",
     "imports-loader": "^0.8.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.13.0",
+    "nodemon": "^2.0.0",
+    "npm-run-all": "^4.1.5",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
     "rimraf": "^3.0.0",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
