--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Une proposition de réponse au challenge Design4green 2019",
   "scripts": {
     "start": "run-p start:**",
+    "start:assets": "nodemon -w assets -x \"npm run build:assets\"",
     "start:html": "nodemon -w src -e html -x \"npm run build:html\"",
     "start:webpack": "webpack-dev-server --config webpack.dev.js --hot",
     "prebuild": "rimraf dist",
     "build": "run-p build:**",
+    "build:assets": "ncp assets dist",
     "build:html": "html-minifier --collapse-whitespace --remove-comments --remove-optional-tags --remove-redundant-attributes --remove-script-type-attributes --remove-tag-whitespace --use-short-doctype --input-dir src --output-dir dist --file-ext html",
     "build:webpack": "cross-env NODE_ENV=production webpack --config webpack.prod.js"
   },
@@ -30,6 +32,7 @@
     "html-minifier": "^4.0.0",
     "imports-loader": "^0.8.0",
     "mini-css-extract-plugin": "^0.8.0",
+    "ncp": "^2.0.0",
     "node-sass": "^4.13.0",
     "nodemon": "^2.0.0",
     "npm-run-all": "^4.1.5",
