--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prebuild": "rimraf dist",
     "build": "run-p build:**",
     "build:assets": "ncp assets dist",
-    "build:html": "html-minifier --collapse-whitespace --remove-comments --remove-optional-tags --remove-redundant-attributes --remove-script-type-attributes --remove-tag-whitespace --use-short-doctype --input-dir src --output-dir dist --file-ext html",
+    "build:html": "html-minifier --collapse-whitespace --remove-comments --remove-redundant-attributes --remove-script-type-attributes --remove-tag-whitespace --input-dir src --output-dir dist --file-ext html",
     "build:webpack": "cross-env NODE_ENV=production webpack --config webpack.prod.js"
   },
   "author": "CGreenIdea",
